--- a/css/charges.css
+++ b/css/charges.css
@@ -20,9 +20,8 @@ ul,ol{
 body{
 	color:#545454;
     background:#ffffff;
-	font:12px/1.5 tahoma,arial,"\5b8b\4f53";
-	/*font-family:"微软雅黑","microsoft yahei","宋体",Arial,tahoma,Simsun;*/
-	/*font-size:12px;*/
+	font-family:"微软雅黑","microsoft yahei","宋体",Arial,tahoma,Simsun;
+	font-size:12px;
 	font-style:normal;}
 #top{
 	background:#f2f2f2;
